# Prod-Backend

./: .dockerignore  .gitignore  Dockerfile.foreman  Dockerfile.worker  MULTI_WORKER_PIPELINE_PLAN.md  README.md  dnn_pipeline_model_paths_smoke.py  dnn_pipeline_multi_input_test.py  docker-compose.yml  pyproject.toml  requirements.txt
common/: README.md  __init__.py  code_instrumenter.py  device_info.py  logging_config.py  protocol.py  serializer.py  test_code_instrumenter_wrappers.py
developer_sdk/: README.md  __init__.py  api.py  client.py  constants.py  decorators.py  model_artifacts.py  namespace.py  tensor_transport.py  topology.py
developer_sdk/image_utils/: __init__.py  aggregation.py  chunking.py  encoding.py  filters.py  io.py
evaluation/: __init__.py  communication_tracker.py  energy_tracker.py  failure_recovery.py  generate_charts.py  load_balancing.py  real_metrics_collector.py  real_runner.py  runner.py  visualization.py
evaluation/experiments/: __init__.py  base.py  energy_constraints.py  failure_simulation.py  heterogeneity.py  scalability.py
foreman/: README.md  main.py
foreman/api/: README.md  __init__.py  checkpoint_routes.py  dashboard.html  evaluation_routes.py  (+2 more)
pc_worker/: README.md  config.py
tests/: check_db_schema.py  customer_support_sentiment_client.py  example_checkpoint_client.py  example_client.py  image_tile_processing_client.py  quick_clear_db.py  run_foreman_simple.py  run_worker_simple.py  view_checkpoints.py  view_database.py
tools/: export_distilbert_sentiment_onnx_partitions.py  export_mobilenetv2_onnx_partitions.py
(+85 files in other folders)
